--- a/infolist.html
+++ b/infolist.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div class="easyui-panel" data-options="border:false" style="padding:5px;">
-    <a href="javascript:;" class="easyui-linkbutton" id="goback" data-options="plain:true,iconCls:'icon-back'">返回</a>
+    <button type="button" class="easyui-linkbutton" id="goback" data-options="plain:true,iconCls:'icon-back'">返回</button>
     <table class="pa-main-table">
         <tbody>
 
@@ -102,7 +102,7 @@
         }
     }
     $("#goback").click(function () {
-        window.location.href = window.history.back();
+        window.history.back();
     })
     var request = getRequest()
     var classid = request["classid"]
