--- a/sadetail.html
+++ b/sadetail.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="easyui-panel" data-options="border:false" style="padding:5px;">
-    <a href="javascript:;" class="easyui-linkbutton" id="goback" data-options="plain:true,iconCls:'icon-back'">返回</a>
+    <button type="button" class="easyui-linkbutton" id="goback" data-options="plain:true,iconCls:'icon-back'">返回</button>
     <table class="pa-main-table">
         <tbody>
 
